tests/paczka1/fuzzy1/61418718.err
Error in line 1: S8 A833 77,2
Error in line 3: 9uV A833 17,7
Error in line 5: 9uV S166 77,5
Error in line 4: 25S S8 47,7
Error in line 6: 9uV S8 79,1
Error in line 15: S8 S166 26,2
Error in line 19: S8 S166 57,58
Error in line 20: 2M68o S166 35,2
Error in line 24: S8 S166 19,1
Error in line 31: f7ZzIXSXz3 S166 -2,3
Error in line 22: 2M68o S8 32,3
Error in line 33: S8 S823 3,1
Error in line 35: S8 A833 50,2
Error in line 36: S8 S8 66,8
Error in line 38: S8 S8 293,9
